# agentsudo

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SELF_HOSTING.md  demo.py  demo_old.py  docker-compose.yml  pyproject.toml  setup.sh  test_cloud.py
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: Dockerfile  ENV_LOCAL_CONFIG.txt  ENV_SETUP.md  README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
dashboard/app/api/playground/: route.ts
dashboard/app/dashboard/: page.tsx
dashboard/app/demo/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/playground/: page.tsx
dashboard/app/profile/: page.tsx
dashboard/app/register/: page.tsx
dashboard/lib/: api.ts  demo-data.ts  supabase.ts
docs/: api.md
examples/: approval_workflow.py  cloud_mode.py  pydantic_integration.py  slack_approval.py  wildcard_scopes.py
sdk/: CHANGELOG.md  LICENSE  README.md  mkdocs.yml
sdk/docs/: api.md  index.md  usage.md
sdk/examples/: README.md  audit_mode.py  basic_usage.py  fastapi_example.py
src/agentsudo/: __init__.py  cloud.py  core.py  guard.py  guardrails.py  integrations.py  slack.py
src/agentsudo/adapters/: __init__.py  fastapi.py
src/ai_sudo/: __init__.py  core.py  guard.py  integrations.py
supabase/: kong.yml
supabase/migrations/: 001_initial_schema.sql
tests/: test_adapters.py  test_core.py  test_guard.py  test_guardrails.py  test_integrations.py
