[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsudo"
version = "0.1.1"
description = "Identity and Access Management (IAM) for AI Agents. Stop hardcoding root API keys."
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest", "pydantic"]

[project.urls]
"Homepage" = "https://github.com/YOUR_USERNAME/agentsudo"

[tool.pytest.ini_options]
pythonpath = ["src"]
