[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsudo"
version = "0.3.2"
description = "The permission layer for AI agents. Enforce scopes, approvals, and safe tool use across LangChain, LlamaIndex, FastAPI, and custom agents."
readme = "README.md"
authors = [{ name = "xywa23" }]
license = { file = "LICENSE" }
keywords = [
    "ai",
    "agents",
    "permissions",
    "security",
    "langchain",
    "llamaindex",
    "fastapi",
    "llm",
    "iam",
    "authorization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = ["certifi>=2024.0.0"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
pydantic = ["pydantic>=2.0.0"]
test = ["pytest", "pydantic>=2.0.0"]
all = ["fastapi>=0.100.0", "starlette>=0.27.0", "pydantic>=2.0.0"]

[project.urls]
"Homepage" = "https://agentsudo.dev"
"Documentation" = "https://agentsudo.dev/docs"
"Repository" = "https://github.com/xywa23/agentsudo"
"Bug Tracker" = "https://github.com/xywa23/agentsudo/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
